--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<table class="table table-striped" cellspacing="0" cellpadding="0">
 			<thead>
 				<tr>
-					<th>Header 1</th>
+					<th>Cidades</th>
 					<th class="actions">Ações</th>
 				</tr>
 			</thead>
@@ -72,21 +72,21 @@
 				<tr>
 					<td>Blumenau</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Forecast</a>
+						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
 				<tr>
 					<td>Campinas</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Forecast</a>
+						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
 				<tr>
 					<td>Pomerode</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Forecast</a>
+						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
