--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
 				<tr>
 					<td>Blumenau</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
+						<a class="btn btn-success btn-xs" href="view.html">Previsão 5 dias</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
 				<tr>
 					<td>Campinas</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
+						<a class="btn btn-success btn-xs" href="view.html">Previsão 5 dias</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
 				<tr>
 					<td>Pomerode</td>
 					<td class="actions">
-						<a class="btn btn-success btn-xs" href="view.html">Detalhes</a>
+						<a class="btn btn-success btn-xs" href="view.html">Previsão 5 dias</a>
 						<a class="btn btn-danger btn-xs"  href="#" data-toggle="modal" data-target="#delete-modal">Excluir</a>
 					</td>
 				</tr>
