--- a/view.html
+++ b/view.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>CRUD com Bootstrap 3</title>
+ <title>Weather</title>
 
  <link href="css/bootstrap.min.css" rel="stylesheet">
  <link href="css/style.css" rel="stylesheet">
@@ -39,7 +39,7 @@
      <span class="icon-bar"></span>
      <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Web Dev Academy</a>
+    <a class="navbar-brand" href="#">Detalhes</a>
    </div>
    <div id="navbar" class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-right">
@@ -53,63 +53,14 @@
  </nav>
 
  <div id="main" class="container-fluid">
-  <h3 class="page-header">Visualizar Item #1</h3>
+  <h3 class="page-header">Detalhes</h3>
   
   <div class="row">
     <div class="col-md-4">
-      <p><strong>Campo Um</strong></p>
+      <p><strong>Previsão para os próximos 5 dias</strong></p>
   	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
     </div>
 	
-	<div class="col-md-4">
-      <p><strong>Campo Dois</strong></p>
-  	  <p>Lorem ipsum dolor</p>
-    </div>
-	
-	<div class="col-md-4">
-      <p><strong>Campo Três</strong></p>
-  	  <p>123.456.789-0</p>
-    </div>
-
-    <div class="col-md-4">
-      <p><strong>Campo Quatro</strong></p>
-  	  <p>In vel sollicitudin leo, id fermentum augue.</p>
-    </div>
-	
-	<div class="col-md-4">
-      <p><strong>Campo Cinco</strong></p>
-  	  <p>(00) 234-5678</p>
-    </div>
-	
-	<div class="col-md-4">
-      <p><strong>Campo Seis</strong></p>
-  	  <p>Nullam ultrices elit ante.</p>
-    </div>
-	
-    <div class="col-md-4">
-      <p><strong>Campo Sete</strong></p>
-  	  <p>Integer finibus in ligula vitae aliquet.</p>
-    </div>
-	
-	<div class="col-md-4">
-      <p><strong>Campo Oito</strong></p>
-  	  <p>Jes</p>
-    </div>
-	
-	<div class="col-md-4">
-      <p><strong>Campo Nove</strong></p>
-  	  <p>Lundo, Merkredo, Vendredo</p>
-    </div>
- 
-    <div class="col-md-8">
-      <p><strong>Campo Dez</strong></p>
-  	  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	  In bibendum nunc urna, at vestibulum neque pellentesque eget. 
-	  Maecenas lacinia velit ante, vitae fermentum ex interdum et. 
-	  In vel sollicitudin leo, id fermentum augue. </p>
-    </div>
- </div>
- 
  <hr />
  <div id="actions" class="row">
    <div class="col-md-12">
